form webhook ok

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-# Configuração do Webhook Make
-MAKE_WEBHOOK_URL=https://hook.eu2.make.com/45uxt6turwdkgkrgopgxmvwqaxr4ojgi
 
+N8N_WEBHOOK_URL=https://editor.coruss.com.br/webhook/live_aldeia_v2
 # Configuração do Mautic
 MAUTIC_USERNAME=seu_usuario_mautic
 MAUTIC_PASSWORD=sua_senha_mautic
