--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,13 @@
   "outputDirectory": ".next",
   "framework": "nextjs",
   "functions": {
-    "src/app/api/webhook/route.ts": {
+    "src/app/api/webhook-n8n/route.ts": {
       "maxDuration": 30
     }
   },
   "headers": [
     {
-      "source": "/api/webhook",
+      "source": "/api/webhook-n8n",
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
